<resources>
    <string name="app_name">TabernApp</string>
    <string name="inventario">Inventario: </string>
    <string name="preparacion">Preparacion:  </string>
    <string name="nueva_direccion">Añadir direccion</string>
    <string name="lista_direcciones">Mis direcciones</string>
    <string name="mostrar_carrito">Ir al carrito</string>
    <string name="info_dialog">Introduzca los datos</string>
    <string name="start">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="name">Nombre de la direccion</string>
    <string name="road">Calle</string>
    <string name="postal">Codigo postal</string>
    <string name="quantity">Cantidad</string>
    <string name="cesta">Mi cesta</string>
    <string name="envio">Direccion de envio:</string>
    <string name="preparado">Punto de recogida:</string>
    <string name="back4app_app_id">KPffBVLv1rxzab65mTeB4DyfTyU81xys0dnXNT4v</string>
    <string name="back4app_client_key">pA5aWvLEjIRgfINXYxPLvT1VC1y3neAOK0mszUbb</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
</resources>